# fastapi-base-app

./: LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
app/: contracts.py  main.py  routers.py
