[tool.poetry]
name = "fastapi-base-app"
version = "0.1.0"
description = ""
authors = ["s-kuchuganova <swetulinaku@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.85.0"
uvicorn = "0.18.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
